--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,9 @@
 }
 
 body {
-  font-family: "Poppins", sans-serif;
-  height: 100vh;
+  font-family: "Rubik", sans-serif;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
