--- a/src/components/routes/Home.scss
+++ b/src/components/routes/Home.scss
@@ -6,9 +6,14 @@
     align-items: center;
   }
 
+  .drop-container {
+    overflow: hidden;
+  }
+
   .select {
     height: 50vh;
     width: 80vw;
+    margin: auto;
     max-height: 300px;
     max-width: 300px;
     background: #F3F3F3;
@@ -21,6 +26,31 @@
 
     small {
       color: #707070;
+    }
+  }
+
+  .error {
+    color: red !important;
+    margin-top: 1em;
+  }
+
+  .img-display {
+    margin-top: 2em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    background: #f3f3f3;
+    padding: 1em 5vw;
+    border-radius: 5px;
+
+    img {
+      max-width: 200px;
+      margin: 1em
+    }
+
+    p {
+      text-align: center;
     }
   }
 }
