--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,15 @@ body {
   font-family: "Rubik", sans-serif;
   min-height: 100vh;
   overflow-x: hidden;
+  padding: 2em 10vw;
 }
 
 h1 {
   font-weight: 500;
+}
+
+@media (max-width: 600px) {
+  body {
+    padding: 2em 5vw;
+  }
 }
