--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -1,11 +1,12 @@
 #navbar {
-  padding: 2em 10vw;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 2em;
 
   h1 {
     display: flex;
+    align-items: center;
     color: #FE9D2B;
 
     img {
@@ -26,6 +27,13 @@
 
     a:hover {
       color: #FE9D2B
+    }
+  }
+
+  @media (max-width: 600px) {
+    ul {
+      // display: none;
+
     }
   }
 }
