--- a/src/components/routes/Home.scss
+++ b/src/components/routes/Home.scss
@@ -36,6 +36,7 @@
 
   .img-display {
     margin-top: 2em;
+    margin-bottom: 2em;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,11 +47,12 @@
 
     img {
       max-width: 200px;
-      margin: 1em
+      margin: 2em 1em 1em 1em;
     }
 
     p {
       text-align: center;
+      margin-bottom: 2em;
     }
   }
 }
