--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -32,8 +32,14 @@
 
   @media (max-width: 600px) {
     ul {
-      // display: none;
-
+      position: fixed;
+      bottom: 0;
+      padding: 1em 2em;
+      width: 100%;
+      margin-left: -5vw;
+      justify-content: space-around;
+      background: white;
+      box-shadow: 0 0 13px 2px #d0d0d0;
     }
   }
 }
