--- a/client/src/components/routes/Home.scss
+++ b/client/src/components/routes/Home.scss
@@ -23,6 +23,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    border: 1px solid #CFCFCF;
 
     small {
       color: #707070;
@@ -44,10 +45,13 @@
     background: #f3f3f3;
     padding: 1em 5vw;
     border-radius: 5px;
+    border: 1px solid #CFCFCF;
 
     img {
       max-width: 200px;
       margin: 2em 2em 1em 2em;
+      border: 1px solid #CFCFCF;
+      border-radius: 5px;
     }
 
     p {
