--- a/client/src/components/routes/Home.scss
+++ b/client/src/components/routes/Home.scss
@@ -47,9 +47,25 @@
     border-radius: 5px;
     border: 1px solid #CFCFCF;
 
+    .img {
+      position: relative;
+      margin: 2em 2em 1em 2em;
+
+      svg {
+        position: absolute;
+        top: -10px;
+        right: -9px;
+        cursor: pointer;
+        transition: 0.3s ease-in-out;
+      }
+
+      svg:hover {
+        transform: scale(1.2);
+      }
+    }
+
     img {
       max-width: 200px;
-      margin: 2em 2em 1em 2em;
       border: 1px solid #CFCFCF;
       border-radius: 5px;
     }
