--- a/client/src/components/routes/Home.scss
+++ b/client/src/components/routes/Home.scss
@@ -36,31 +36,36 @@
   }
 
   .img-display {
-    margin-top: 2em;
-    margin-bottom: 2em;
     display: flex;
+    position: relative;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     background: #f3f3f3;
     padding: 1em 5vw;
+    margin: 2em 1em;
     border-radius: 5px;
     border: 1px solid #CFCFCF;
+
+    svg {
+      position: absolute;
+      cursor: pointer;
+      transition: 0.3s ease-in-out;
+      top: -10px;
+      right: -10px;
+    }
+
+    svg:hover {
+      transform: scale(1.2);
+    }
 
     .img {
       position: relative;
       margin: 2em 2em 1em 2em;
 
       svg {
-        position: absolute;
         top: -10px;
         right: -9px;
-        cursor: pointer;
-        transition: 0.3s ease-in-out;
-      }
-
-      svg:hover {
-        transform: scale(1.2);
       }
     }
 
