--- a/client/src/components/routes/Home.scss
+++ b/client/src/components/routes/Home.scss
@@ -7,13 +7,15 @@
   }
 
   .drop-container {
-    overflow: hidden;
+    // overflow: hidden;
+    border-radius: 10px;
   }
 
   .select {
     height: 50vh;
     width: 80vw;
     margin: auto;
+    outline: none;
     max-height: 300px;
     max-width: 300px;
     background: #F3F3F3;
@@ -24,10 +26,15 @@
     align-items: center;
     cursor: pointer;
     border: 1px solid #CFCFCF;
+    transition: 0.3s ease-in-out;
 
     small {
       color: #707070;
     }
+  }
+
+  .select:hover {
+    background: #E0E0E0;
   }
 
   .error {
