--- a/client/src/components/routes/Home.scss
+++ b/client/src/components/routes/Home.scss
@@ -66,6 +66,10 @@
       transform: scale(1.2);
     }
 
+    // .img-container {
+    //   transition: 0.3s ease-in-out;
+    // }
+
     .img {
       position: relative;
       margin: 2em 2em 1em 2em;
